export default class Suit {

    constructor(){
        this.clubs = '\u2663';
        this.spades = '\u2660';        
        this.hearts = '\u2665';
        this.diamonds = '\u2666';        
    }
}