export default class Rank {

    constructor(){
        this.rankItems = ['A', 2, 3, 4, 5, 6, 7, 8, 9, 10, 'J', 'Q', 'K'];        
    }    
} 